# student-assistant

./: .env.example  .gitignore  README.md  concepts_importants.txt  indexation.sh  pyproject.toml  resume_extraction_parse.txt
backend/: check_install.py  test_embeddings.py  test_hugging_face.py  test_llm.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  conversation_manager.py
backend/app/models/: schemas.py
backend/app/services/: rag_service.py
data/chroma_db/: chroma.sqlite3
data/conversations/: conv_2ee0522e3ca0.json  conv_915c9074cae3.json  conv_ac0bcfc881d9.json  conv_bd41c41d9a77.json  conv_d81c1469e1f2.json
frontend/: streamlit_app.py
scripts/: chunk_documents.py  index_documents.py  parse_documents.py  validate_data.py
